2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* docs/reference/gtksourceview-2.0-sections.txt:
	* gtksourceview/gtksourcecompletiontriggerkey.h:
	* gtksourceview/gtksourcecompletionitem.c:
	* gtksourceview/gtksourcecompletion.h:
	* gtksourceview/gtksourcecompletioninfo.h:
	Fixed doc warnings.

2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

        * docs/reference/gtksourceview-2.0-sections.txt:
        Updated docs.

2009-04-11  Jesse van den Kieboom  <jessevdk@gnome.org>
	
	* gtksourceview/gtksourcecompletiontriggerkey.c:

	Fixed documentation

2009-04-11  Jesse van den Kieboom  <jessevdk@gnome.org>
	
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	
	Implemented completion unref in dispose

2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

        * gtksourceview/gtksourcecompletion.c:
        * gtksourceview/gtksourcecompletion.h:
        Add completion_finish func.

2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>
	
	* gtksourceview/gtksourcecompletiontriggerkey.h:
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	* tests/completion-simple.c:
	
	Changed trigger_key API from using accelerator string representation
	to more common key/modifier API
	
2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletionprovider.c:
	* gtksourceview/gtksourcecompletionprovider.h:
	* tests/gsc-provider-test.c:
	Removed gtk_source_completion_provider_finish.

2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>

	* gtksourceview/gtksourcecompletiontriggerkey.h:
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	
	Cleanup code and change set_keys to set_accelerator
	
2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>

	* gtksourceview/gtksourcecontextengine.c:
	* tests/test-widget.c:
	
	Fixed string format warnings
	
2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c: