@@ -64,6 +64,8 @@ PKG_CHECK_MODULES(DEP, [
 	gio-2.0
 	gtk+-2.0 >= $GTK_REQUIRED_VERSION
 	libxml-2.0 >= $LIBXML_REQUIRED_VERSION
+	libdevhelp-1.0
+	gconf-2.0
 ])
 
 # i18N stuff
