@@ -1,3 +1,13 @@
+2009-04-11  Jesse van den Kieboom  <jessevdk@gnome.org>
+
+	* tests/gsc-provider-devhelp.h:
+	* tests/gsc-provider-devhelp.c:
+	* tests/completion-simple.c:
+	* tests/Makefile.am:
+	* configure.ac:
+	
+	Added very basic devhelp provider, seems to work
+
 2009-04-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* docs/reference/gtksourceview-2.0-sections.txt:
